and now it compiles

--- a/res/layout/layout_listview.xml
+++ b/res/layout/layout_listview.xml
@@ -1,11 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="match_parent" 
-	android:layout_height="match_parent" >
+                android:id="@+id/layout_listview_relativelayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <TextView android:id="@+id/layout_listview_textview"
-    android:layout_width="match_parent" 
-    android:layout_height="match_parent"
-    android:textSize="20sp" />
-    
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:textSize="20sp"/>
+
+
+    <ImageView android:id="@+id/layout_listview_imageview"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:paddingRight="16dp"
+               android:contentDescription="Images Text FIXME" />
+
+    <TextView android:id="@+id/layout_listview_textview_top"
+              android:layout_toRightOf="@id/layout_listview_imageview"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:textSize="20sp"
+              android:textColor="#000000" />
+
+    <TextView android:id="@+id/layout_listview_textview_bottom"
+              android:layout_toRightOf="@id/layout_listview_imageview"
+              android:layout_below="@id/layout_listview_textview_top"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:textColor="#000000" />
+
 </RelativeLayout>
