--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -13,8 +13,7 @@
     
     <item android:id="@+id/main_menu_help"
         android:title="@string/main_menu_help_title"
-        android:icon="@android:drawable/ic_menu_help"
-        android:showAsAction="ifRoom" />
+        android:showAsAction="never" />
     
     <item android:id="@+id/main_menu_about"
         android:title="@string/main_menu_about_title"
