--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -3,12 +3,12 @@
         
     <item android:id="@+id/main_menu_reload"
         android:title="@string/main_menu_reload_title"
-        android:icon="@android:drawable/ic_menu_rotate"
+        android:icon="@android:drawable/ic_menu_today"
         android:showAsAction="ifRoom" />
     
     <item android:id="@+id/main_menu_favourites"
         android:title="@string/main_menu_favourites_title"
-        android:icon="@android:drawable/ic_menu_save"
+        android:icon="@android:drawable/ic_menu_manage"
         android:showAsAction="ifRoom" />
     
     <item android:id="@+id/main_menu_help"
