--- a/res/layout/core.xml
+++ b/res/layout/core.xml
@@ -5,8 +5,7 @@
 
     <TextView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="CBeeber - Today's CBeebies TV Schedule" />
+        android:layout_height="wrap_content"/>
 
     <ListView android:id="@+id/activity_main_listview"
         android:layout_width="match_parent"
