--- a/res/layout/layout_listview.xml
+++ b/res/layout/layout_listview.xml
@@ -4,34 +4,39 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <TextView android:id="@+id/layout_listview_textview"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:textSize="20sp"/>
+    <TextView
+            android:id="@+id/layout_listview_textview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textSize="20sp"/>
 
 
-    <ImageView android:id="@+id/layout_listview_imageview"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:paddingRight="16dp"
-               android:contentDescription="Images Text FIXME" />
+    <ImageView
+            android:id="@+id/layout_listview_imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="16dp"
+            android:contentDescription="Images Text FIXME"/>
 
-    <TextView android:id="@+id/layout_listview_textview_top"
-              android:layout_toRightOf="@id/layout_listview_imageview"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:textSize="20sp"
-              android:textColor="#000000" />
+    <TextView
+            android:id="@+id/layout_listview_textview_top"
+            android:layout_toRightOf="@id/layout_listview_imageview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="#000000"/>
 
-    <TextView android:id="@+id/layout_listview_textview_bottom"
-              android:layout_toRightOf="@id/layout_listview_imageview"
-              android:layout_below="@id/layout_listview_textview_top"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:textColor="#000000" />
+    <TextView
+            android:id="@+id/layout_listview_textview_bottom"
+            android:layout_toRightOf="@id/layout_listview_imageview"
+            android:layout_below="@id/layout_listview_textview_top"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"/>
 
-    <ImageView android:id="@+id/activity_main_imageview"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"/>
+    <ImageView
+            android:id="@+id/activity_main_imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
 </RelativeLayout>
