--- a/res/layout/layout_listview.xml
+++ b/res/layout/layout_listview.xml
@@ -3,40 +3,40 @@
                 android:id="@+id/layout_listview_relativelayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
+<!--
     <TextView
             android:id="@+id/layout_listview_textview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textSize="20sp"/>
-
+            android:textSize="26sp"/>
+    -->
 
     <ImageView
-            android:id="@+id/layout_listview_imageview"
+            android:id="@+id/layout_schedule_imageview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="16dp"
-            android:contentDescription="Images Text FIXME"/>
+            android:paddingRight="18dp"/>
 
     <TextView
-            android:id="@+id/layout_listview_textview_top"
-            android:layout_toRightOf="@id/layout_listview_imageview"
+            android:id="@+id/layout_schedule_textview_programme_title"
+            android:layout_toRightOf="@id/layout_schedule_imageview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="26sp"
+            android:textColor="#000000"/>
+
+    <TextView
+            android:id="@+id/layout_schedule_textview_programme_time"
+            android:layout_toRightOf="@id/layout_schedule_imageview"
+            android:layout_below="@id/layout_schedule_textview_programme_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textColor="#000000"/>
-
-    <TextView
-            android:id="@+id/layout_listview_textview_bottom"
-            android:layout_toRightOf="@id/layout_listview_imageview"
-            android:layout_below="@id/layout_listview_textview_top"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"/>
-
+<!--
     <ImageView
             android:id="@+id/activity_main_imageview"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"/>-->
 
 </RelativeLayout>
