--- a/res/layout/programme.xml
+++ b/res/layout/programme.xml
@@ -6,23 +6,11 @@
     tools:context="${packageName}.${activityClass}" >
     
 
-    
-    <ImageButton android:id="@+id/activity_programme_imagebutton_favourite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/ic_menu_star" />
-
-    <ImageButton android:id="@+id/activity_programme_imagebutton_iplayer"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:contentDescription="@string/programme_iplayer"
-                 android:background="@drawable/ic_menu_iplayer" />
-	
 	<ScrollView
         android:id="@+id/activity_programme_scrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_toRightOf="@id/activity_programme_imagebutton_favourite" >
+         >
 
 	    <LinearLayout
             android:layout_width="match_parent"
@@ -43,6 +31,7 @@
 
     		<ImageView
         		android:id="@+id/activity_programme_image"
+                android:scaleType="fitStart"
         		android:layout_width="match_parent"
         		android:layout_height="wrap_content"
         		android:layout_marginLeft="10dp"
@@ -72,21 +61,7 @@
         		android:textColor="#000000"
         		android:textSize="26sp" />
 
-    		<TextView
-        		android:id="@+id/activity_programme_textview_iplayer_link"
-        		android:layout_width="match_parent"
-        		android:layout_height="wrap_content"
-        		android:layout_marginLeft="10dp"
-        		android:layout_marginTop="10dp"
-        		android:layout_marginRight="10dp"
-        		android:layout_marginBottom="10dp"
-        		android:text=""
-        		android:textColor="#000000"
-                android:textSize="12sp"
-        		android:singleLine="true"
-        		android:focusable="true"
-        		android:focusableInTouchMode="true"
-        		/>
+
 
 	    </LinearLayout>
 
