--- a/res/layout/layout_listview.xml
+++ b/res/layout/layout_listview.xml
@@ -18,7 +18,6 @@
             android:layout_height="wrap_content"
             android:textSize="26sp"
             android:textColor="#000000"/>
-
     <TextView
             android:id="@+id/layout_schedule_textview_programme_time"
             android:layout_toRightOf="@id/layout_schedule_imageview"
@@ -27,5 +26,11 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textColor="#000000"/>
+    <ImageView
+            android:id="@+id/layout_schedule_favourite"
+            android:layout_toRightOf="@id/layout_schedule_textview_programme_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="18dp"/>
 
 </RelativeLayout>
