--- a/res/layout/layout_listview.xml
+++ b/res/layout/layout_listview.xml
@@ -26,11 +26,29 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textColor="#000000"/>
+
+    <ImageView
+            android:id="@+id/layout_schedule_now"
+            android:layout_toRightOf="@id/layout_schedule_imageview"
+            android:layout_below="@id/layout_schedule_textview_programme_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    <!--
+    <TextView
+            android:id="@+id/layout_schedule_textview_programme_favourite"
+            android:layout_toRightOf="@id/layout_schedule_imageview"
+            android:layout_below="@id/layout_schedule_textview_programme_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:text="@string/schedule_favourite"
+            android:textColor="#00FF00"/>
+
     <ImageView
             android:id="@+id/layout_schedule_favourite"
             android:layout_toRightOf="@id/layout_schedule_textview_programme_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="18dp"/>
+            android:paddingRight="18dp"/>-->
 
 </RelativeLayout>
