--- a/res/layout/core.xml
+++ b/res/layout/core.xml
@@ -5,7 +5,8 @@
     <ListView
             android:id="@+id/activity_main_listview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+           />
 
 </RelativeLayout>
 
