--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -10,7 +10,7 @@
     <item
             android:id="@+id/main_menu_favourites"
             android:title="@string/main_menu_favourites"
-            android:icon="@drawable/ic_menu_fav_unchecked"
+            android:icon="@drawable/ic_menu_star"
             android:showAsAction="ifRoom"/>
 
     <item
