--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -1,14 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
-    xmlns:tools="http://schemas.android.com/tools" 
-    android:layout_width="match_parent" 
-    android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    tools:context="${packageName}.${activityClass}" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="horizontal"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent">
 
-    <RelativeLayout
-            android:id="@+id/activity_help"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-     />
 
-</RelativeLayout>
+    <fragment android:name="net.conor.android.cbeeber.view.HelpFragment"
+              android:id="@+id/help_fragment"
+              android:layout_weight="2"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent" />
+
+</LinearLayout>
