--- a/res/layout/help_view.xml
+++ b/res/layout/help_view.xml
@@ -6,25 +6,15 @@
     tools:context="${packageName}.${activityClass}" >
 
     <TextView
-            android:id="@+id/activity_help_heading"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:text=""
-            android:textColor="#000000"
-            android:textSize="32sp"
-            android:textStyle="bold" />
-    <TextView
             android:id="@+id/activity_help_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:text=""
-            android:textColor="#000000"
-            android:textSize="28sp"/>
+            android:text="@string/help_content"
+            android:textSize="20sp"
+            android:textColor="#000000"/>
+
 
 </RelativeLayout>
