--- a/res/menu/help.xml
+++ b/res/menu/help.xml
@@ -8,4 +8,10 @@
             android:icon="@android:drawable/ic_menu_revert"
             android:showAsAction="always|withText"/>
 
+    <item
+            android:id="@+id/help_menu_sensor"
+            android:title="@string/help_menu_sensor"
+            android:icon="@android:drawable/ic_menu_manage"
+            android:showAsAction="never"/>
+
 </menu>
