--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -1,3 +1,6 @@
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="horizontal"
               android:layout_width="fill_parent"
@@ -11,3 +14,4 @@
               android:layout_height="match_parent" />
 
 </LinearLayout>
+</ScrollView>
