--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -5,13 +5,13 @@
             android:id="@+id/main_menu_reload"
             android:title="@string/main_menu_reload_title"
             android:icon="@drawable/ic_menu_refresh"
-            android:showAsAction="ifRoom"/>
+            android:showAsAction="ifRoom|withText"/>
 
     <item
             android:id="@+id/main_menu_favourites"
             android:title="@string/main_menu_favourites"
             android:icon="@drawable/ic_menu_star"
-            android:showAsAction="ifRoom"/>
+            android:showAsAction="ifRoom|withText"/>
 
     <item
             android:id="@+id/main_menu_help"
